--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Sheets Data</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
 </table>
 
 <!-- Link to the external JavaScript file -->
-<script src="script.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
