solving dynamic file location issue2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </table>
 
 <!-- Link to the external JavaScript file -->
-<script src="./script.js"></script>
+<script src="./Script.js"></script>
 
 </body>
 </html>
